application/2048-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "2048-ingress"
  namespace: "2048-game"
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    # alb.ingress.kubernetes.io/certificate-arn: !!!!! CHANGE ME arn:aws:acm:us-west-2:xxxx:certificate/xxxxxx!!!!
    # alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    # alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}
    # alb.ingress.kubernetes.io/waf-acl-id: *****ID of Web ACL******
  labels:
    app: 2048-ingress
spec:
  rules:
    - http:
      # host: 2048.<change me>.fsi405.jyidiego.net
        paths:
          - path: /*
            backend:
              serviceName: "service-2048"
              servicePort: 80
